@@ -1,3 +1,10 @@
+2003-12-21  Shiro Kawai  <shiro@acm.org>
+
+	* src/kahua/test/xml.scm (match-pattern): added !contain
+	directive.
+
+	* test/test-xml.scm : added tests fo the above change.
+
 2003-12-19  Shiro Kawai  <shiro@acm.org>
 
 	* src/kahua/test/xml.scm
